--- a/styles/style.css
+++ b/styles/style.css
@@ -49,3 +49,278 @@ ol {
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
 }
+
+.page {
+  display: flex;
+  margin: auto;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "result content_details";
+  gap: 30px;
+  margin: auto;
+  align-items: end;
+  width: 100%;
+  padding: 0 30px;
+}
+
+/* Все, что связано с контейнером result*/
+.result {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 16px;
+  margin-top: 78px;
+}
+
+.result__video-container {
+  position: relative;
+  height: 386px;
+  width: 100%;
+}
+
+.result__video {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;  
+}
+
+/* Все, что связано с контейнером content*/
+.content__details {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  gap: 26px;
+}
+
+.content__list-item {
+  width: 100%;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  height: 103px;
+  width: 194px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  width: 196px;
+}
+
+.content__list-container {
+  position: relative;
+  overflow-y: auto;
+  height: 298px;
+}
+
+/* Все, что связано с формой*/
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  width: 100%;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
+}
+
+.search-form__checkbox-list .search-form__label:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  cursor: pointer;
+}
+
+.search-form__label-text {
+  line-height: 21px;
+  margin-left: 5px;
+}
+
+.search-form__textfield {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  height: 27px;
+  width: 225px;
+  color: #fff;
+  border: none;
+  border-top: #fff solid 1px;
+  border-bottom: #fff solid 1px;
+  background-color: transparent;
+  appearance: none;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 19px;
+  height: 19px;
+  border: #fff solid 1px;
+  background-color: transparent;
+}
+
+.search-form__pseudo-checkbox::after {
+  top: 1px;
+  left: 1px;
+  display: none;
+  width: 15px;
+  height: 15px;
+  content: "";
+  background-color: #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  display: block;
+}
+
+.button {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21px;
+  width: 194px;
+  min-height: 34px;
+  color: #fff;
+  border: solid 1px #fff;
+  background-color: transparent;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.button:focus-visible {
+  outline: #fff solid 1px;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  align-self: end;
+}
+
+.more-button {
+  width: 100%;
+}
+
+/* Все, что связано с шрифтами*/
+
+.search-form__fieldset-title {
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #fff;
+}
+
+.search-form__textfield:hover {
+  cursor: text;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70px;
+  cursor: default;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+}
+
+.content__card-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: #fff solid 1px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  max-width: 100%;
+  white-space: nowrap;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
