--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  margin: auto;
 }
 
 h1,
@@ -48,11 +50,6 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
-}
-
-.page {
-  display: flex;
-  margin: auto;
 }
 
 .content {
@@ -128,11 +125,15 @@ ol {
   height: 298px;
 }
 
+.content__card-link_current .content__video-card {
+  background-color: #545050;
+}
+
 /* Все, что связано с формой*/
 .search-form {
   display: flex;
-  justify-content: space-between;
-  align-items: start;
+  align-items: self-start;
+  justify-content: space-around;
   width: 100%;
 }
 
@@ -148,11 +149,13 @@ ol {
 
 .search-form__fieldset {
   border: none;
+  position: relative;
+  width: 212px;
 }
 
 .search-form__checkbox-list {
   display: flex;
-  column-gap: 10px;
+  column-gap: 15px;
   align-items: center;
 }
 
@@ -256,16 +259,12 @@ ol {
 /* Все, что связано с шрифтами*/
 
 .search-form__fieldset-title {
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
   color: #fff;
   margin-bottom: 5px;
-}
-
-.search-form__textfield:active {
-  outline: 1px solid #fff;
 }
 
 .search-form__textfield:hover {
